Fix logo on mobile

--- a/_config.yml
+++ b/_config.yml
@@ -3,10 +3,9 @@ permalink: pretty
 title: 'TRUST platform'
 
 logo:
-  mobile: "images/logo/logo.png"
+  mobile: "images/icon.png"
   mobile_height: "32px"
   mobile_width: "32px"
-  #desktop: "images/logo/logo.png"
   desktop: "images/logo/logo_trust.gif"
   desktop_height: "90px"
   desktop_width: "480px"
