--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,16 +1,22 @@
 main:
+  - name: "News"
+    url: "/news/"
+    weight: 2
   - name: "About"
     url: "/about/"
-    weight: 2
+    weight: 3
   - name: "Services"
     url: "/services/"
-    weight: 3
+    weight: 4
   - name: "Team"
     url: "/team/"
-    weight: 4
+    weight: 5
+  - name: "Links"
+    url: "/links/"
+    weight: 6
   - name: "Contact"
     url: "/contact/"
-    weight: 5
+    weight: 7
 
 footer:
   - name: "Home"
