--- a/_config.yml
+++ b/_config.yml
@@ -11,10 +11,10 @@ logo:
   desktop_width: "480px"
 
 home: 
-  limit_services: 6
+  limit_packages: 6
 
 collections:
-  services:
+  packages:
     output: true
     sort_by: weight
   team:
@@ -23,9 +23,9 @@ collections:
 defaults:
   - scope:
       path: ""
-      type: "services"
+      type: "packages"
     values:
-      layout: "service"
+      layout: "package"
   - scope:
       path: ""
       type: "team"
