--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ logo:
   mobile: "images/icon.png"
   mobile_height: "32px"
   mobile_width: "32px"
-  desktop: "images/logo/logo_trust.gif"
+  desktop: "images/logo/logo.gif"
   desktop_height: "90px"
   desktop_width: "480px"
 
