--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -8,21 +8,24 @@ main:
   - name: "News"
     url: "/news/"
     weight: 3
+  - name: "Documentation"
+    url: "https://cea-trust-platform.readthedocs.io/en/latest/"
+    weight: 4
   - name: "Classes"
     url: "/classes/"
-    weight: 4
+    weight: 5
   - name: "Simulation"
     url: "/simulation/"
-    weight: 5
+    weight: 6
   - name: "Team"
     url: "/team/"
-    weight: 6
+    weight: 7
   - name: "Links"
     url: "/links/"
-    weight: 7
+    weight: 8
   - name: "Contact"
     url: "/contact/"
-    weight: 8
+    weight: 9
 
 footer:
   - name: "Home"
