--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -8,24 +8,21 @@ main:
   - name: "News"
     url: "/news/"
     weight: 3
-  - name: "Documentation"
-    url: "https://cea-trust-platform.readthedocs.io/en/latest/"
+  - name: "Gallery"
+    url: "/gallery/"
     weight: 4
-  - name: "Classes"
-    url: "/classes/"
+  - name: "Cite us"
+    url: "/cite_us/"
     weight: 5
-  - name: "Simulation"
-    url: "/simulation/"
-    weight: 6
   - name: "Team"
     url: "/team/"
-    weight: 7
-  - name: "Links"
-    url: "/links/"
-    weight: 8
+    weight: 6
   - name: "Contact"
     url: "/contact/"
-    weight: 9
+    weight: 7
+  - name: "Documentation"
+    url: "https://cea-trust-platform.readthedocs.io/en/latest/"
+    weight: 8
 
 footer:
   - name: "Home"
@@ -36,4 +33,7 @@ footer:
     weight: 2
   - name: "Contact"
     url: "/contact/"
+    weight: 3
+  - name: "Cite us"
+    url: "/cite_us/"
     weight: 3
